<resources>
    <string name="app_name">E Commerce Admin</string>

    <string name="the_right_address">The Right Address \n for Manage your \n Business</string>
    <string name="it_s_now_is_very_easy">This version of the E-Commerce app \n enables you to add new products,\n send push notifications to your customers,\n manage incoming orders, and control order processing efficiently.</string>
    <string name="start">START</string>
    <string name="log_in">LOG IN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="google" translatable="false">Google</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="let_s_login">Let\'s log in as an admin.</string>
    <string name="if_you_don_t_have_an_account">If you don\’t have an account, this version of the app is not for you.</string>
    <string name="login_text">LogIn</string>
    <string name="register_text">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">we will send you the password reset link to your email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="search_now">Search now</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
    <string name="categories">Categories</string>
    <string name="color">Color</string>
    <string name="sizes">Sizes</string>
    <string name="add_to_card">Add to Card</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="delete_all_products">Delete all Products</string>
    <string name="address">Address</string>
    <string name="address_location_home">Address Location : Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">street</string>
    <string name="phone">phone</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="e_commerce_dose_not_support_virtual_payments_you_can_pay_when_you_receive_your_order">E_commerce doesn\'t support virtual payments. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">Place Order</string>
    <string name="products">Products</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="edit_personal_details">edit personal details</string>
    <string name="orders">Orders</string>
    <string name="all_orders">All Orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="billing_option">Billing</string>
    <string name="billing_title">Billing</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="see_product">See product</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="type_in_search_bar_to_get_your_product">type in search bar to get your product</string>
    <string name="navigation">Navigation</string>
    <string name="set_your_addresses">Set your Addresses</string>

    <string name="default_web_client_id" translatable="false">719213248976-1ff23piiest8fvmccn3teh4ok9tt1ipr.apps.googleusercontent.com</string>
    <string name="addresses_list">My Addresses</string>
    <string name="add_new_address">Add new address</string>
    <string name="product_name">product Name</string>
    <string name="check_out">Check Out</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="my_account">My account</string>

    <string name="tab_home">Home</string>
    <string name="tab_chair">Chair</string>
    <string name="tab_cupboard">Cupboard</string>
    <string name="tab_table">Table</string>
    <string name="tab_accessory">Accessory</string>
    <string name="tab_furniture">Furniture</string>

    <string name="toast_fill_missing_field">Please fill in the missing fields.</string>
    <string name="snackBar_resetPassword">The reset link has been sent to your email.</string>
    <string name="toast_google_signIn_failed">Google sign-in failed:</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>