<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/g_card_background">

    <TextView
        android:id="@+id/tvShippingAddress"
        style="@style/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/address"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShippingAddress">

        <TextView
            android:id="@+id/tvFullName"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvAddress"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="1sp"
        android:layout_marginTop="6dp"
        android:background="@color/g_blue_gray200"
        android:backgroundTint="@color/g_blue_gray200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearAddress" />


</androidx.constraintlayout.widget.ConstraintLayout>