<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmOrderBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/blueButtonStyle"
        android:text="@string/confirm_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/confirmOrderBtn"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarOrderDetails"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageCloseOrder"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/close"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvOrderId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="#1234567"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageCloseOrder"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/linearStepView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/toolbarOrderDetails">

                <TextView
                    style="@style/h3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_order_status"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/orderStatusSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/locationIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/linearStepView" />

            <TextView
                android:id="@+id/tvShippingAddress"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/locationIV"
                app:layout_constraintTop_toBottomOf="@id/linearStepView" />

            <LinearLayout
                android:id="@+id/linearAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/tvShippingAddress">

                <TextView
                    android:id="@+id/tvFullName"
                    style="@style/h2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvAddress"
                    style="@style/h2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    style="@style/h2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="1sp"
                android:layout_marginTop="15dp"
                android:background="@color/g_blue_gray200"
                android:backgroundTint="@color/g_blue_gray200"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/linearAddress" />

            <ImageView
                android:id="@+id/shoppingIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/baseline_shopping_cart_24"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <TextView
                android:id="@+id/tvProducts"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:text="@string/products"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/shoppingIV"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProducts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/line1"
                app:layout_constraintTop_toBottomOf="@id/tvProducts"
                tools:listitem="@layout/billing_products_rv_item" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/total_box_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/rvProducts">

                <TextView
                    style="@style/h3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15sp"
                    android:layout_marginBottom="15sp"
                    android:layout_weight="1"
                    android:text="@string/total"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTotalPrice"
                    style="@style/h3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginTop="16sp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="16sp"
                    android:text="1500$"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>